# core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PR_DESCRIPTION.md  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: astro.config.mjs  package-lock.json  package.json
examples/: MAX7219_CHAIN_TESTING_README.md  comprehensive_multi_display_test.rs  config_loader_example.rs  demo_dual_counter.rs  device_configuration_example.rs  i2c_common_devices.rs  i2c_comprehensive_test.rs  i2c_enhanced_features.rs  i2c_network_test.rs  i2c_simple_test.rs  keyboard_matrix_example.rs  matrix_keyboard_simple.rs  max7219_adaptive_test.rs  max7219_automated_chain_test.rs  max7219_brackets_demo.rs  max7219_case_sensitivity_test.rs  max7219_chain_stress_test.rs  max7219_chain_validation.rs  max7219_comparison.rs  max7219_console_demo.rs  max7219_console_test.rs  max7219_cs_test.rs  max7219_daisy_chain.rs  max7219_decimal_test.rs  max7219_device_abstraction.rs  max7219_digit_order_test.rs  max7219_flash_text_demo.rs  max7219_interactive_chain_test.rs  max7219_interactive_chain_test_part2.rs  max7219_raw_segments.rs  max7219_simple_test.rs  max7219_spi_test.rs  max7219_text_display.rs  max7219_text_justification.rs  minimal_spi_test.rs  multi_display_manager.rs  network_config.rs  network_device_test.rs  physical_device_config_example.rs  pin_diagnostic_test.rs  (+17 more)
examples/config/: comprehensive_sample_config.yaml  (+2 more)
models/: PoKeys56E.yaml  PoKeys56U.yaml  PoKeys57E.yaml  PoKeys57U.yaml
scripts/: commit-with-checks.sh  fix-precommit-hooks.sh  install-python-tools-manual.sh  pre-push-hook.sh  push-with-checks.sh  setup-branch-protection.sh  setup-devops.sh  test-precommit.sh
src/: communication.rs  device.rs  encoders.rs  error.rs  keyboard_matrix.rs  lcd.rs  lib.rs  matrix.rs  model_manager.rs  models.rs  network.rs  oem_parameters.rs  pulse_engine.rs  pwm.rs  sensors.rs  types.rs
tests/: bulk_operations_test.rs  device_model_tests.rs  encoder_sampling_test.rs  file_monitoring_comprehensive_tests.rs  file_monitoring_tests.rs  hardware_integration.rs.disabled  i2c_tests.rs  integration_tests.rs  keyboard_matrix_tests.rs  max7219_spi_test.rs  model_core_tests.rs  model_manager_tests.rs  models_tests.rs  protocol_tests.rs  pulse_engine_status_test.rs  unit_tests.rs  uspibridge_test.rs
(+48 files in other folders)
