[package]
name = "pokeys-lib"
version = "0.22.3"
edition = "2024"
authors = ["marc@teichtahl.com"]
description = "Pure Rust core library for PoKeys device control - USB/Network connectivity, I/O, PWM, encoders, SPI/I2C protocols"
license = "Apache-2.0"
repository = "https://github.com/pokeys-toolkit/core"
keywords = ["pokeys", "hardware", "usb", "automation", "control"]
categories = ["hardware-support", "api-bindings"]
readme = "README.md"

[lib]
name = "pokeys_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = []
hardware-tests = []

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
thiserror = "2.0.15"
log = "0.4.27"
libc = "0.2"
notify = "8.2.0"
dirs = "6.0.0"
fastrand = "2.0.1"

[dev-dependencies]
tempfile = "3.10.1"
